--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         body {
             font-family: 'DB Screen Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-            background: #1a237e;
+            background: #000050;
             min-height: 100vh;
             color: white;
             font-weight: 300;
