--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Departures - Train Station Board</title>
     <style>
+        @font-face {
+    font-family: 'Bahnschrift';
+    src: url('./fonts/Bahnschrift.woff2') format('woff2'),
+         url('./fonts/Bahnschrift.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
         * {
             margin: 0;
             padding: 0;
@@ -12,7 +21,7 @@
         }
         
         body {
-            font-family: 'DB Screen Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            font-family: 'Bahnschrift','Barlow','DB Screen Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
             background: #000050;
             min-height: 100vh;
             color: white;
@@ -56,7 +65,7 @@
         }
         
         .station-search-input {
-            font-family: 'DB Screen Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            font-family: 'Bahnschrift','Barlow','DB Screen Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
             font-size: 3rem;
             font-weight: 300;
             letter-spacing: 1px;
