--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Departures - Train Station Board</title>
     <style>
-        @font-face {
+    <!-- @font-face {
     font-family: 'Bahnschrift';
     src: url('./fonts/Bahnschrift.woff2') format('woff2'),
          url('./fonts/Bahnschrift.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
-}
+} -->
 
         * {
             margin: 0;
